--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf8">
     <title>My First Bitstarter</title>
     <linfk type="text/css" rel="stylesheet"
-	   href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+	   href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
     <style type="text/css">
       body {
         padding-top: 20px;
