--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf8">
     <title>My First Bitstarter</title>
-    <linfk type="text/css" rel="stylesheet"
+    <link type="text/css" rel="stylesheet"
 	   href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
     <style type="text/css">
       body {
