--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div class="row heading">
         <div class="span12">
-          <h1>Vertigo Bitstarter</h1>
+          <h1>Vertigo Near Field</h1>
         </div>
       </div> 
      <div class="row subheading">
