--- a/index.html
+++ b/index.html
@@ -2,20 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="utf8">
-    <title>My First Bitstarter</title>
-    <link type="text/css" rel="stylesheet"
-	   href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+    <title>Vertigo Bitstarter</title>
+    <meta name="viewport" content="width-device-width, initial-scale-1.0">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <!--link rel="stylesheet" href="http://neetdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css"-->
+    <!--link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css"-->
+
+
+    <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+    
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"  Rel="stylesheet" type="text/css">
     <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
+      /* large desktop */
+      @media (min-width: 980px) {
+       body {
+        padding-top: 60px;
+       }
       }
-      .container {
-        width: 960px;
+
+      /* main body and headings */
+      body {
+        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+      }
+      .heading, .subheading {
+        font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+        text-align: center;
       }
       p.lead {
-        padding-top: 15px;
+        padding-top: 1.5%;
+        font-size: 24px;
+        line-height: 30px;
       }
+      p {
+        font-size: 18px;
+        line-height: 24px;
+      }
+
       .navigation, .pitch, .section1, .section2, .faq, .footer {
         padding: 10px 0px 10px 0px;
       }
@@ -39,7 +62,40 @@
     </style>
   </head>
   <body>
+<div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="brand" href="#">Vertigo Bitstarter</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li class="active"><a href="#">Home</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+
     <div class="container">
+
+      <div class="row-fluid heading">
+	<div class="span12">
+          <h1>Product</h1>
+        </div>
+      </div>
+      <div class="row-fluid subheading">
+	<div class="span12">
+	  <p class="lead">Sentence description.</p>
+        </div>
+      </div>
+
+
       <div class="row navigation">
         <div class="span2 logo">
           Logo
