--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <title>Vertigo Bitstarter</title>
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
-    <!--link rel="stylesheet" href="http://neetdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css"-->
-    <!--link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css"-->
-
-
-    <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+    <link rel="stylesheet" href="http://neetdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"  Rel="stylesheet" type="text/css">
@@ -19,6 +16,25 @@
        body {
         padding-top: 60px;
        }
+       .linediv-l {
+        border-right: 1px white solid;
+       }
+       .linediv-r {
+        border-left: 1px white solid;
+       }
+      }
+
+      /* landscape phones and down */
+      @media (max-width: 480px) {
+        .copy {
+         padding: 2.5% 10%;
+        }
+        .linediv-l {
+         border-bottom: 1px white solid;
+        }
+        .linediv-r {
+         border-top: 1px white solid;
+        }
       }
 
       /* main body and headings */
@@ -37,6 +53,24 @@
       p {
         font-size: 18px;
         line-height: 24px;
+      }
+      
+      /* video pitch and action */
+      .pitch {
+        padding: 2.5% 0%;
+      }
+      .order {
+        padding: 2% 0%;
+      }
+      .actions {
+        background-color: #343434;
+        padding: 3% 0%;
+      }
+      .video, .thermometer, .order, .social, statistics {
+        text-align: center;
+      }
+      .statistics h3, .statistics p {
+        color: white;
       }
 
       .navigation, .pitch, .section1, .section2, .faq, .footer {
@@ -94,18 +128,47 @@
 	  <p class="lead">Sentence description.</p>
         </div>
       </div>
+      <div class="row-fluid pitch">
+        <div class="span5 offset1 video">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
+        </div>
 
+        <div class="span5 actions">
+	  <div class="span8 offset2">
+	    <div class="statistics">
+	      <div class="span4">
+		<div class="linediv-l">
+		  <h3>1000</h3> <p>backers</p>
+		</div>
+	      </div>
+	      <div class="span4">
+		<div class="linediv-c">
+		  <h3>$6000</h3> <p>of $10,000</p>
+		</div>
+	      </div>
+	      <div class="span4">
+		<div class="linediv-r">
+		  <h3>10</h3> <p>days left</p>
+		</div>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="span10 offset1">
+	    <div class="thermometer progress active">
+	      <div class="bar bar-success" style="width: 60%;"></div>
+	      <div class="bar bar-warning" style="width: 40%;"></div>
+	    </div>
+	  </div>
+	  <div class="span6 offset3 order">
+	    <button class="btn btn-success btn-large">Preorder</button>
+	  </div>
+	  <div class="span8 offset2 social">
+	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+	  </div>
+	</div>
+      </div>
 
-      <div class="row navigation">
-        <div class="span2 logo">
-          Logo
-        </div>
-        <div class="span6 blank">
-          Blank
-        </div>
-        <div class="span4 about">
-          About
-        </div>
       </div>
       <div class="row heading">
         <div class="span12">
