--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://neetdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
-    
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"  Rel="stylesheet" type="text/css">
     <style type="text/css">
@@ -73,30 +74,29 @@
         color: white;
       }
 
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-        padding: 10px 0px 10px 0px;
+      /* marketing copy and footer */
+      .copy {
+        padding-top: 2.5%;
+        padding-bottom: 2.5%;
+        text-align: justify;
       }
-      .video, .thermometer, .order, .social {
-        border: 1px dotted;
+      .asset {
+        padding: 2.5% 0%;
+      }
+      .footer {
+        color: #cccccc;
         text-align: center;
       }
-      .video {
-        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-        height: 124px;
-        line-height: 124px;
+      .footer p {
+        font-size: 11px;
       }
-      .thermometer, .order, .social {
-        /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-        height: 40px;
-        line-height: 40px;
-      }
-      div.row {
-        border: 1px solid;
+      .footer a {
+        color: #ccccff;
       }
     </style>
   </head>
   <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
@@ -169,53 +169,75 @@
 	</div>
       </div>
 
-      </div>
-      <div class="row heading">
-        <div class="span12">
-          <h1>Vertigo Near Field</h1>
+      <div class="row-fluid section1">
+        <div class="span5 offset1 asset">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
-      </div> 
-     <div class="row subheading">
-        <div class="span12">
-          <p class="lead">This is my first bitstarter project.</p>
-        </div>
-      </div>
-      <div class="row pitch">
-        <div class="span6 video">
-          Video
-        </div>
-        <div class="span6">
-          <div class="thermometer">
-            Thermometer
-          </div>
-          <div class="order">
-            Order
-          </div>
-          <div class="social">
-            Social
-          </div>
+        <div class="span5 copy">
+	  <p>
+	    It was so very clear for the first time, all of it...
+	    It was a village square in a green with trees and an old white-washed Spanish church with a cloister. 
+	    Across the green, there was a big gray wooden house with a porch and shutters and a balcony above, 
+	    a small garden, and next to it a livery stable with old carriages lined up inside...
+	    At the end of the green, there was a white-washed stone house with a lovely pepper tree at the corner...
+	  </p>
         </div>
       </div>
-      <div class="row section1">
-        <div class="span12">
-          Marketing Section 1
+
+      <div class="row-fluid section2">
+        <div class="span5 offset1 copy copy-right">
+	  <p>
+	    It was so very clear for the first time, all of it...
+	    It was a village square in a green with trees and an old white-washed Spanish church with a cloister. 
+	    Across the green, there was a big gray wooden house with a porch and shutters and a balcony above, 
+	    a small garden, and next to it a livery stable with old carriages lined up inside...
+	    At the end of the green, there was a white-washed stone house with a lovely pepper tree at the corner...
+	  </p>
+	</div>
+        <div class="span5 asset">
+          <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
       </div>
-      <div class="row section2">
-        <div class="span12">
-          Marketing Section 2
-        </div>
-      </div>
-      <div class="row faq">
-        <div class="span12">
-          FAQ
-        </div>
-      </div>
-      <div class="row footer">
-        <div class="span12">
-          Footer
-        </div>
+      
+      <div class="row-fluid faq">
+        <div class="span10 offset1">
+	  <h3>FAQ</h3>
+	  <div class="accordion" id="accordion2">
+            <div class="accordion-group">
+              <div class="accordion-heading">
+		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+		  What does FAQ stand for?
+		</a>
+	      </div>
+	      <div id="collapseOne" class="accordion-body collapse">
+		<div class="accordion-inner">
+		  Frequently Asked Question.
+		</div>
+	      </div>
+	    </div>
+            <div class="accordion-heading">
+	      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+		What's a FAQ?
+	      </a>
+	    </div>
+	    <div id="collapseOne" class="accordion-body collapse">
+	      <div class="accordion-inner">
+		A common question.
+	      </div>
+	    </div>
+	  </div>
+	</div>
       </div>
     </div>
-  </body>
+
+    <div class="row-fluid footer">
+      <div class="span12">
+	<p>This work is licensed under the
+	  <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>
+	  , without all the cruft that would otherwise be put at the bottom...
+	</p>
+      </div>
+    </div>
+</div>
+</body>
 </html>
