--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf8">
-    <title>Vertigo Bitstarter</title>
+    <title>My First Bitstarter</title>
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -104,7 +104,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Vertigo Bitstarter</a>
+          <a class="brand" href="#">Bitstarter</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
@@ -125,7 +125,7 @@
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
-	  <p class="lead">Sentence description.</p>
+	  <p class="lead">One sentence description.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -175,11 +175,7 @@
         </div>
         <div class="span5 copy">
 	  <p>
-	    It was so very clear for the first time, all of it...
-	    It was a village square in a green with trees and an old white-washed Spanish church with a cloister. 
-	    Across the green, there was a big gray wooden house with a porch and shutters and a balcony above, 
-	    a small garden, and next to it a livery stable with old carriages lined up inside...
-	    At the end of the green, there was a white-washed stone house with a lovely pepper tree at the corner...
+	    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	  </p>
         </div>
       </div>
@@ -187,11 +183,7 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
 	  <p>
-	    It was so very clear for the first time, all of it...
-	    It was a village square in a green with trees and an old white-washed Spanish church with a cloister. 
-	    Across the green, there was a big gray wooden house with a porch and shutters and a balcony above, 
-	    a small garden, and next to it a livery stable with old carriages lined up inside...
-	    At the end of the green, there was a white-washed stone house with a lovely pepper tree at the corner...
+	    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	  </p>
 	</div>
         <div class="span5 asset">
@@ -217,12 +209,12 @@
 	    </div>
             <div class="accordion-heading">
 	      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		What's a FAQ?
+		What's a Frequently Asked Question?
 	      </a>
 	    </div>
 	    <div id="collapseOne" class="accordion-body collapse">
 	      <div class="accordion-inner">
-		A common question.
+		A question which is commonly asked by users.
 	      </div>
 	    </div>
 	  </div>
@@ -234,7 +226,7 @@
       <div class="span12">
 	<p>This work is licensed under the
 	  <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>
-	  , without all the cruft that would otherwise be put at the bottom...
+	  , without all the cruft that would otherwise be put at the bottom of the page.
 	</p>
       </div>
     </div>
