--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf8">
-    <title>My First Bitstarter</title>
+    <title>Vertigo Bitstarter</title>
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -120,12 +120,12 @@
 
       <div class="row-fluid heading">
 	<div class="span12">
-          <h1>Product</h1>
+          <h1>Vertigo Near Field Location</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
-	  <p class="lead">One sentence description.</p>
+	  <p class="lead">The near field network based on mobile devices geo-location.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -138,17 +138,17 @@
 	    <div class="statistics">
 	      <div class="span4">
 		<div class="linediv-l">
-		  <h3>1000</h3> <p>backers</p>
+		  <h3>1</h3> <p>backers</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10,000</p>
+		  <H3>$500</h3> <p>of $20,000</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-r">
-		  <h3>10</h3> <p>days left</p>
+		  <h3>90</h3> <p>days left</p>
 		</div>
 	      </div>
 	    </div>
@@ -175,7 +175,14 @@
         </div>
         <div class="span5 copy">
 	  <p>
-	    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	    There was a village square, a green 
+	    with trees... and an old whitewashed 
+	    Spanish church with a cloister.  
+	    Across the green: a big, grey, wooden 
+	    house with a porch and shutters and 
+	    a balcony above... a small garden, 
+	    and next to it, a livery stable... 
+	    with old carriages lined up inside.
 	  </p>
         </div>
       </div>
@@ -183,7 +190,14 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
 	  <p>
-	    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	    There was a village square, a green 
+	    with trees... and an old whitewashed 
+	    Spanish church with a cloister.  
+	    Across the green: a big, grey, wooden 
+	    house with a porch and shutters and 
+	    a balcony above... a small garden, 
+	    and next to it, a livery stable... 
+	    with old carriages lined up inside.
 	  </p>
 	</div>
         <div class="span5 asset">
@@ -198,23 +212,23 @@
             <div class="accordion-group">
               <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		  What does FAQ stand for?
+		  What is the target?
 		</a>
 	      </div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  Frequently Asked Question.
+		  All mobile devices.
 		</div>
 	      </div>
 	    </div>
             <div class="accordion-heading">
 	      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		What's a Frequently Asked Question?
+		What is the main use case?
 	      </a>
 	    </div>
 	    <div id="collapseOne" class="accordion-body collapse">
 	      <div class="accordion-inner">
-		A question which is commonly asked by users.
+		Sharing contacts, and geolocat them in the close area.
 	      </div>
 	    </div>
 	  </div>
