--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 	      </div>
 	      <div id="collapseOne" class="accordion-body collapse">
 		<div class="accordion-inner">
-		  All mobile devices.
+		  All mobile devices providing gps position.
 		</div>
 	      </div>
 	    </div>
