--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 	    <div class="statistics">
 	      <div class="span4">
 		<div class="linediv-l">
-		  <h3>1</h3> <p>backers</p>
+		  <h3>1</h3> <p>backer</p>
 		</div>
 	      </div>
 	      <div class="span4">
