--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 	    </div>
 	    <div id="collapseOne" class="accordion-body collapse">
 	      <div class="accordion-inner">
-		Sharing contacts, and geolocat them in the close area.
+		Sharing contacts by near field contact, and geolocat them in the close area.
 	      </div>
 	    </div>
 	  </div>
