--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
       <div class="row-fluid heading">
 	<div class="span12">
-          <h1>Vertigo Near Field Location</h1>
+          <h1>Vertigo Near Field Network</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
