bug width device

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf8">
     <title>Vertigo Bitstarter</title>
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
@@ -120,12 +120,12 @@
 
       <div class="row-fluid heading">
 	<div class="span12">
-          <h1>Vertigo Near Field Network Standard</h1>
+          <h1>Vertigo Near Field Network</h1>
         </div>
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
-	  <p class="lead">The near field network based on mobile devices geo-location.</p>
+	  <p class="lead">Make real life fluid with geolocation.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -175,14 +175,10 @@
         </div>
         <div class="span5 copy">
 	  <p>
-	    There was a village square, a green 
-	    with trees... and an old whitewashed 
-	    Spanish church with a cloister.  
-	    Across the green: a big, grey, wooden 
-	    house with a porch and shutters and 
-	    a balcony above... a small garden, 
-	    and next to it, a livery stable... 
-	    with old carriages lined up inside.
+	    The main challenge in modern real life is to bring fluidity in our real life.
+	    This mean today technology can help us building real-time geolocation applications
+	    that cant greatly improve our organization and efficency in the real world.
+	    We put geolocation at the center of our system, to make life more fluid.
 	  </p>
         </div>
       </div>
@@ -190,14 +186,13 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
 	  <p>
-	    There was a village square, a green 
-	    with trees... and an old whitewashed 
-	    Spanish church with a cloister.  
-	    Across the green: a big, grey, wooden 
-	    house with a porch and shutters and 
-	    a balcony above... a small garden, 
-	    and next to it, a livery stable... 
-	    with old carriages lined up inside.
+	    In what case are we improving your fluidity level?
+	    - where did my husband park the car?
+	    - no more complexity to organize meating in town.
+	    - i'm walking this way, maybe this car can peek me up?
+	    - waiting at a rendez vous, if only i can know where he is, i can evaluate what i can do instead of waiting
+	    - lets just exchange contact by pushing a button at the same moment.
+	    - maybe i can also give you 10$ the same way?
 	  </p>
 	</div>
         <div class="span5 asset">
