--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
-
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"  Rel="stylesheet" type="text/css">
+    <script src="geoloc.js"></script>
     <style type="text/css">
       /* large desktop */
       @media (min-width: 980px) {
@@ -125,13 +125,12 @@
         </div>
       </div>
       <div class="row-fluid subheading">
-	<div class="span12">
-	  <p class="lead">Make real life fluid with geolocation.</p>
+	<div class="span12" id="geo_title">
+	 
         </div>
       </div>
       <div class="row-fluid pitch">
-        <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://placehold.it/480x300">
+        <div class="span5 offset1 video" id="mapholder">
         </div>
 
         <div class="span5 actions">
