--- a/index.html
+++ b/index.html
@@ -175,10 +175,7 @@
         </div>
         <div class="span5 copy">
 	  <p>
-	    The main challenge in modern real life is to bring fluidity in our real life.
-	    This mean today technology can help us building real-time geolocation applications
-	    that cant greatly improve our organization and efficency in the real world.
-	    We put geolocation at the center of our system, to make life more fluid.
+	    Real-time geolocation for everyday's real life.
 	  </p>
         </div>
       </div>
@@ -186,13 +183,7 @@
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
 	  <p>
-	    In what case are we improving your fluidity level?
-	    - where did my husband park the car?
-	    - no more complexity to organize meating in town.
-	    - i'm walking this way, maybe this car can peek me up?
-	    - waiting at a rendez vous, if only i can know where he is, i can evaluate what i can do instead of waiting
-	    - lets just exchange contact by pushing a button at the same moment.
-	    - maybe i can also give you 10$ the same way?
+	    Real-time carpooling, geolocated messages, share itineraries...
 	  </p>
 	</div>
         <div class="span5 asset">
@@ -216,29 +207,30 @@
 		</div>
 	      </div>
 	    </div>
-            <div class="accordion-heading">
-	      <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		What is the main use case?
-	      </a>
-	    </div>
-	    <div id="collapseOne" class="accordion-body collapse">
-	      <div class="accordion-inner">
-		Sharing contacts by near field contact, and geolocat them in the close area.
+            <div class="accordion-group">
+              <div class="accordion-heading">
+		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+		  What is the main use case?
+		</a>
+	      </div>
+	      <div id="collapseTwo" class="accordion-body collapse">
+		<div class="accordion-inner">
+		  Sharing contacts by near field contact, and geolocat them in the close area.
+		</div>
 	      </div>
 	    </div>
 	  </div>
 	</div>
       </div>
-    </div>
 
-    <div class="row-fluid footer">
-      <div class="span12">
-	<p>This work is licensed under the
-	  <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>
-	  , without all the cruft that would otherwise be put at the bottom of the page.
-	</p>
+      <div class="row-fluid footer">
+	<div class="span12">
+	  <p>This work is licensed under the
+	    <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>
+	    , without all the cruft that would otherwise be put at the bottom of the page.
+	  </p>
+	</div>
       </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
