--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
         </div>
       </div>
       <div class="row-fluid subheading">
-	<div class="span12" id="geo_title">
-	 
+	<div class="span12">
+	  <p class="lead">Real-time geolocation for everyday's real life</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -174,8 +174,8 @@
           <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
         <div class="span5 copy">
-	  <p>
-	    Real-time geolocation for everyday's real life.
+	  <p id="geoData">
+	    <!-- put geolocation data here -->
 	  </p>
         </div>
       </div>
