--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=true"></script>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800"  Rel="stylesheet" type="text/css">
     <script src="geoloc.js"></script>
@@ -118,7 +119,6 @@
     </div>
 
     <div class="container">
-
       <div class="row-fluid heading">
 	<div class="span12">
           <h1>Vertigo Near Field Network</h1>
@@ -130,9 +130,10 @@
         </div>
       </div>
       <div class="row-fluid pitch">
-        <div class="span5 offset1 video" id="mapholder">
-        </div>
-
+        <div class="span5 offset1 video">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <!-- put map here -->
+	</div>
         <div class="span5 actions">
 	  <div class="span8 offset2">
 	    <div class="statistics">
