--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <H3>$500</h3> <p>of $20,000</p>
+		  <H3>$5</h3> <p>of $20,000</p>
 		</div>
 	      </div>
 	      <div class="span4">
@@ -180,14 +180,19 @@
 	  <div class="row-fluid">
 	  <div class="span10 offset1">
 	    <div class="thermometer progress active">
-	      <div class="bar bar-success" style="width: 60%;"></div>
-	      <div class="bar bar-warning" style="width: 40%;"></div>
+	      <div class="bar bar-success" style="width: 1%;"></div>
+	      <div class="bar bar-warning" style="width: 99%;"></div>
 	    </div>
 	  </div>
 	  </div>
 	  <div class="row-fluid">
 	  <div class="span6 offset3 order">
-	    <button class="btn btn-success btn-large">Preorder</button>
+	    <a class="coinbase-button" 
+	       data-button-style="custom_large" data-button-text="Preorder with Bitcoin" 
+	       data-code="c41f0eeb3950e18cfb1d23f2f0b6829c" href="https://coinbase.com/checkouts/c41f0eeb3950e18cfb1d23f2f0b6829c">
+	      Preorder with Bitcoin
+	    </a>
+	    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	  </div>
 	  </div>
 	  <div class="row-fluid">
